<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
    <string name="imagem_do_pacote_escolhido">Imagem do pacote escolhido</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="digite_as_informa_es_do_cart_o_de_cr_dito_que_voc_deseja_usar_para_o_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da Compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_vencimento_cartao">MM</string>
    <string name="ano_vencimento_cartao">AA</string>
    <string name="codigo_do_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
</resources>
