<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_pagamento_informacoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/digite_as_informa_es_do_cart_o_de_cr_dito_que_voc_deseja_usar_para_o_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_pagamento_texto_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_informacoes" />

    <TextView
        android:id="@+id/activity_pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_texto_valor_compra"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_texto_valor_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/activity_pagamento_numero_do_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_preco" />

    <EditText
        android:id="@+id/activity_pagamento_mes_vencimento_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_vencimento_cartao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_numero_do_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_ano_vencimento_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_vencimento_cartao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/activity_pagamento_mes_vencimento_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_cvc_cartao"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/codigo_do_cartao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_numero_do_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_numero_do_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="@string/mascara_nome_no_cartao"
        android:hint="@string/nome_no_cartao"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_mes_vencimento_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_cvc_cartao" />

    <Button
        android:id="@+id/activity_pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_botao_pagamento"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_nome_no_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_nome_no_cartao" />

</androidx.constraintlayout.widget.ConstraintLayout>