<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ResumoPacoteActivity">

    <ImageView
        android:id="@+id/activity_resumo_pacote_imagem"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/sao_paulo_sp"
        android:contentDescription="@string/imagem_do_pacote_escolhido" />

    <TextView
        android:id="@+id/activity_resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_pacote_imagem"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:text="São Paulo"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/activity_resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_pacote_local"
        app:layout_constraintStart_toStartOf="@id/activity_resumo_pacote_local"
        android:textSize="16sp"
        tools:text="2 dias"/>

    <TextView
        android:id="@+id/activity_resumo_pacote_periodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/activity_resumo_pacote_preco"
        app:layout_constraintStart_toStartOf="@id/activity_resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@id/activity_resumo_pacote_dias"
        tools:text="08/12 - 10/12 de 2020" />

    <TextView
        android:id="@+id/activity_resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/activity_resumo_pacote_periodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_resumo_pacote_periodo"
        tools:text="R$243,99" />

    <TextView
        android:id="@+id/activity_resumo_pacote_preco_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/activity_resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="@id/activity_resumo_pacote_preco"
        android:textSize="14sp"
        android:text="@string/preco_final"/>

    <Button
        android:id="@+id/activity_resumo_pacote_botao_pagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_botao_pagamento"
        android:text="@string/realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>